--- a/divisoes.Rmd
+++ b/divisoes.Rmd
@@ -19,13 +19,13 @@ library(dplyr)
 
 Partindo dos pressupostos que
 
-1) A divisão da casa de Paredes de Coura foi feita equitativamente, o dinheiro entregue e esse ponto encerrado;
+1) A divisão da casa de Paredes de Coura foi feita equitativamente, o dinheiro entregue, estando esse ponto encerrado;
 
 2) Tal como tem sido feito até agora, todas as despesas e receitas serão divididas pelos herdeiros na proporção de 5/8 para Ana Paula Rocha e 1/8 para cada um dos filhos de Alberto Rocha;
 
-3) A herança não possui capital disponível. Como tal, as despesas incorridas por ela desde o falecimento de Alberto Rocha (Pai) foram adiantadas por Ana Paula Rocha;
+3) Após a divisão integral do dinheiro resultante da venda da casa de Afe, herança regressou à situação inicial de ausência de capital disponível. Como tal, as despesas incorridas por ela desde o falecimento de Alberto Rocha (Pai) foram, adiantadas por Ana Paula Rocha na qualidade de cabeça de casal da herança;
 
-Temos que o balanço de cada um dos herdeiros relativamente à herança, após a liquidação das dívidas e créditos pessoais mencionadas no documento anterior, é:
+4) Após a liquidação das dívidas e créditos pessoais conforme acordado na correspondência anterior, esse adiantamento por Ana Paula Rocha traduz-se num balanço entre os herdeiros de:
 
 ```{r}
 berto = -6013
@@ -39,7 +39,7 @@ paula = -(berto + xanda + crist)
 * Cristina Rocha: **`r crist` €**
 * Nair Rocha: **`r xanda` €**
 
-Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, bem como ressarcimento das despesas incorridas pelos herdeiros no âmbito desta. Como poderão ter notado, este documento é um markdown, podendo (e devendo) ser editado e actualizado de forma trivial. Desde já encorajam-se os herdeiros a acrescentar items e sugerir alterações conforme relevante.
+Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, bem como ressarcimento das despesas incorridas pelos herdeiros no âmbito desta. O balanço existente referido acima será actualizado após cada divisão, reflectindo o valor que cabe a cada herdeiro. Como poderão ter notado, este documento é um markdown, podendo (e devendo), sendo por isso dinâmico e como tal não deve ser entendido como uma proposta estática e final. Propostas de valores e acréscimo de items por parte dos herdeiros serão facilmente implementadas.
 
 #### Fiat Punto
 
@@ -75,7 +75,7 @@ paula = paula + pinin*5/8
 
 #### Recheio da Maia e de Paredes de Coura
 
-Ana Paula Rocha propõe aos restantes herdeiros a aquisição dos recheios das casa da Maia e Paredes de Coura pelo valor de **`r mobilia = 4000; mobilia` €**. Argumenta que este valor é uma estimativa bastante optimista para o valor atingível através da revenda deste a terceiros. O balanço após esta transação será de 
+Ana Paula Rocha propõe aos restantes herdeiros a aquisição dos recheios das casa da Maia e Paredes de Coura pelo valor de **`r mobilia = 4000; mobilia` €**. O balanço após esta transação será de 
 
 ```{r}
 berto = berto + mobilia*1/8
@@ -91,13 +91,13 @@ paula = paula + mobilia*-3/8
 
 #### Despesas do Funeral
 
-Alberto Rocha apresenta as despesas que assumiu com o funeral de Alberto Rocha (Pai), no valor de de **`r funeral = 5215.99; funeral` €**. O balanço após esta transação será de 
+Alberto Rocha apresenta as despesas que assumiu com o funeral de Alberto Rocha (Pai), no valor de de **`r funeral = 5215.99; funeral` €**. Ana Paula Rocha recebeu para esse efeito um subsídio no valor de **`r subsidio = 1300.90; subsidio` €**, que será entregue a Alberto Rocha para liquidação da dívida à Agência Funerária. O valor restante da despesa (**`r funeral_subsidiado = funeral-subsidio;funeral_subsidiado` €**) será dividido entre os todos herdeiros. O balanço após esta transação será de 
 
 ```{r}
-berto = berto + funeral*7/8
-xanda = xanda + funeral*-1/8
-crist = crist + funeral*-1/8
-paula = paula + funeral*-5/8
+berto = berto + (funeral_subsidiado)*7/8 + subsidio
+xanda = xanda + (funeral_subsidiado)*-1/8
+crist = crist + (funeral_subsidiado)*-1/8
+paula = paula + (funeral_subsidiado)*-5/8 - subsidio
 ```
 
 * Ana Paula Rocha: **`r paula` €**
@@ -157,7 +157,7 @@ paula_sum = c('inicial' = 18039,
               'jipe' = 5/8*pinin,
               'mudancas' = 3/8*mudanca,
               'bigbox' = -5/8*bigbox,
-              'funeral' = -5/8*funeral,
+              'funeral' = -5/8*(funeral_subsidiado)-subsidio,
               'recheio' = -3/8*mobilia)
 
 berto_sum = c('inicial' = -6013,
@@ -165,7 +165,7 @@ berto_sum = c('inicial' = -6013,
               'jipe' = -7/8*pinin,
               'mudancas' = -1/8*mudanca,
               'bigbox' = 7/8*bigbox,
-              'funeral' = 7/8*funeral,
+              'funeral' = 7/8*funeral_subsidiado + subsidio,
               'recheio' = 1/8*mobilia)
 
 crist_sum = c('inicial' = -6013,
@@ -173,7 +173,7 @@ crist_sum = c('inicial' = -6013,
               'jipe' = 1/8*pinin,
               'mudancas' = -1/8*mudanca,
               'bigbox' = -1/8*bigbox,
-              'funeral' = -1/8*funeral,
+              'funeral' = -1/8*funeral_subsidiado,
               'recheio' = 1/8*mobilia)
 
 xanda_sum = c('inicial' = -6013,
@@ -181,7 +181,7 @@ xanda_sum = c('inicial' = -6013,
               'jipe' = 1/8*pinin,
               'mudancas' = -1/8*mudanca,
               'bigbox' = -1/8*bigbox,
-              'funeral' = -1/8*funeral,
+              'funeral' = -1/8*funeral_subsidiado,
               'recheio' = 1/8*mobilia)
 
 sumario = data.frame(cbind(paula_sum,
@@ -204,10 +204,11 @@ rownames(sumario)[nrow(sumario)] = 'Total'
 sumario
 ```
 
+Propõe-se assim que, estando todas as partes de acordo com as divisões propostas acima e o apuramento dos respectivos balanços, sejam liquidadas as diferenças apuradas. Ficarão assim concluídas as partilhas da herança de Alberto Rocha, com excepção da casa da Maia, que é discutida em seguida.
 
 ## Divisão da Casa da Maia
 
-Propõe-se que a casa da Maia seja avaliada por um avaliador acreditado pela CMVM, escolhido da lista apresentada em https://web3.cmvm.pt/sdi/peritos/peritos.cfm. O valor resultante dessa avaliação caberá a cada um dos herdeiros, na proporção habitual (5-1-1-1), à qual será em seguida acrescentado o balanço final calculado anteriormente.
+Propõe-se que a casa da Maia seja avaliada por um avaliador acreditado pela CMVM, escolhido da lista apresentada em https://web3.cmvm.pt/sdi/peritos/peritos.cfm. O valor resultante dessa avaliação caberá a cada um dos herdeiros, na proporção habitual (5-1-1-1).
 
 Para a concretização da divisão da casa urge acordar no avaliador e proceder à avaliação, uma vez que sem o resultado da mesma é impossível prosseguir. Pede-se aos herdeiros que se pronunciem sobre a escolha do avaliador. Uma vez obtida a avaliação, será apresentada uma proposta de execução da divisão.
 
