--- a/divisoes.Rmd
+++ b/divisoes.Rmd
@@ -8,7 +8,7 @@ output:
     number_sections: false
     theme: lumen
   github_document:
-    html_preview: FALSE
+    html_preview: true
 ---
 
 ```{r, include = F}
