dasse que sou burro

--- a/divisoes.Rmd
+++ b/divisoes.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Divisão da Herança de Alberto Rocha"
 output:
-  github_document: default
+  github_document: 
+    html_preview: true
   html_document:
     toc: true
     toc_float: true
@@ -44,7 +45,7 @@ paula = -(berto + xanda + crist)
 * Cristina Rocha: **`r crist` €**
 * Nair Rocha: **`r xanda` €**
 
-Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, bem como ressarcimento das despesas incorridas pelos herdeiros no âmbito desta. O balanço existente referido acima será actualizado após cada divisão, reflectindo o valor que cabe a cada herdeiro. Como poderão ter notado, este documento é um markdown, podendo (e devendo), sendo por isso dinâmico e como tal não deve ser entendido como uma proposta estática e final. Propostas de valores e acréscimo de items por parte dos herdeiros serão facilmente implementadas.
+Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, bem como ressarcimento das despesas incorridas pelos herdeiros no âmbito desta. O balanço existente referido acima será actualizado após cada divisão, reflectindo o valor que cabe a cada herdeiro. Como poderão ter notado, este documento é um markdown, sendo por isso dinâmico e como tal não deve ser entendido como uma proposta estática e final. Propostas de valores e acréscimo de items por parte dos herdeiros serão facilmente implementadas.
 
 # Items
 
