--- a/divisoes.Rmd
+++ b/divisoes.Rmd
@@ -16,22 +16,62 @@ knitr::opts_chunk$set(echo = F,
                       include = F,
                       warning = F,
                       message = F)
- options(scipen=8, digits=2)
+
+options(scipen=8, digits=2)
  
 library(dplyr) 
 ```
+
 
 # Intro
 
 Partindo dos pressupostos que
 
-1) A divisão da casa de Paredes de Coura foi feita equitativamente, o dinheiro entregue, estando esse ponto encerrado;
+1) Todas as despesas e receitas serão divididas pelos herdeiros na proporção de 5/8 para Ana Paula Rocha e 1/8 para cada um dos filhos de Alberto Rocha;
 
-2) Tal como tem sido feito até agora, todas as despesas e receitas serão divididas pelos herdeiros na proporção de 5/8 para Ana Paula Rocha e 1/8 para cada um dos filhos de Alberto Rocha;
+2) A divisão da casa de Paredes de Coura foi feita equitativamente, tendo o imóvel sido vendido por **`r casa_coura = 178500`** € e o dinheiro já entregue a cada um dos herdeiros da seguinte forma, estando esse ponto encerrado:
 
-3) Após a divisão integral do dinheiro resultante da venda da casa de Afe, herança regressou à situação inicial de ausência de capital disponível. Como tal, as despesas incorridas por ela desde o falecimento de Alberto Rocha (Pai) foram, adiantadas por Ana Paula Rocha na qualidade de cabeça de casal da herança;
+* Ana Paula Rocha: **`r casa_coura*5/8` €**
+* Alberto Rocha: **`r casa_coura/8` €**
+* Cristina Rocha: **`r casa_coura/8` €**
+* Nair Rocha: **`r casa_coura/8` €**
 
-4) Após a liquidação das dívidas e créditos pessoais conforme acordado na correspondência anterior, esse adiantamento por Ana Paula Rocha traduz-se num balanço entre os herdeiros de:
+3) Após a divisão integral do dinheiro resultante da venda da casa de Afe, herança regressou à situação inicial de ausência de capital disponível. Como tal, as despesas incorridas por ela desde o falecimento de Alberto Rocha (Pai) foram adiantadas por Ana Paula Rocha na qualidade de cabeça de casal da herança.
+
+Numa primeira fase, foi realizado o pagamento de dívidas e créditos pendentes. A documentação e comprovativos referentes a esses pagamentos foram comunicados e aprovados por e-mail previamente. É apresentado um resumo dos valores liquidados nesta fase:
+
+```{r, include = T}
+
+# velho = data.frame(matrix(NA, nrow = 6, ncol = 1))
+Item = c('Liq. Oney 1',
+           'Liq. Oney 2',
+           'Liq. Wizink 1',
+           'Prest. Oney',
+           'Prest. Wizink',
+           'Divida a Luis Miguel')
+
+Valor = c(4394.72,
+          5104.68,
+          8311.46,
+          2091.97,
+          3197.84,
+          25000) %>% as.numeric()
+
+velho = data.frame(matrix(Valor))
+names(velho) = c('Valor')
+row.names(velho) = Item 
+
+velho$Valor = Valor %>% as.numeric()
+
+velho['Total',] = colSums(velho)
+velho['1/8',] = velho['Total',]/8
+
+velho
+```
+
+
+
+4) Após a liquidação das dívidas e créditos pessoais referidos no ponto anterior, esse adiantamento por Ana Paula Rocha traduz-se num balanço entre os herdeiros de:
 
 ```{r}
 berto = -6013
@@ -45,7 +85,7 @@ paula = -(berto + xanda + crist)
 * Cristina Rocha: **`r crist` €**
 * Nair Rocha: **`r xanda` €**
 
-Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, bem como ressarcimento das despesas incorridas pelos herdeiros no âmbito desta. O balanço existente referido acima será actualizado após cada divisão, reflectindo o valor que cabe a cada herdeiro. Como poderão ter notado, este documento é um markdown, sendo por isso dinâmico e como tal não deve ser entendido como uma proposta estática e final. Propostas de valores e acréscimo de items por parte dos herdeiros serão facilmente implementadas.
+Com base neste ponto de partida, apresentam-se seguidamente propostas para a divisão do património móvel da herança, para o ressarcimento das despesas incorridas pelos herdeiros no âmbito desta e para a divisão da casa da Maia. O balanço existente referido acima será actualizado após cada divisão, reflectindo o valor que cabe a cada herdeiro. Como poderão ter notado, este documento é um markdown, sendo por isso dinâmico e como tal não deve ser entendido como uma proposta estática e final. Propostas de valores e acréscimo de items por parte dos herdeiros serão facilmente implementadas.
 
 # Items
 
