--- a/divisoes.Rmd
+++ b/divisoes.Rmd
@@ -275,10 +275,10 @@ Imposto Único de Circulação do Fiat Punto:
 
 Imposto Único de Circulação do Mitsubishi Pajero Pinin:
 ![](comprovativos/iuc_pinin_2022.png)
-Imposto Municipal sobre Imóveis da casa da Maia (linhas 3 e 4):
+Imposto Municipal sobre Imóveis da casa da Maia (linhas 3 e 4) e IUC de 2024 (última linha):
 ![size=150](comprovativos/imi_actualizado.jpg)
 
-Estas despesas totalizam **`r impostos = 153.85 + 133 + 414.80;impostos`**, € sendo o balanço dos herdeiros após a sua contabilização o seguinte:
+Estas despesas totalizam **`r impostos = 153.85 + 133 + 153.81 + 414.80;impostos`**, € sendo o balanço dos herdeiros após a sua contabilização o seguinte:
 
 ```{r}
 berto = berto + impostos*-1/8
